--- a/SwiftNetwork/Storyboards/Base.lproj/Main.storyboard
+++ b/SwiftNetwork/Storyboards/Base.lproj/Main.storyboard
@@ -31,8 +31,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="352" height="174"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="friends" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZF-eV-9Z4">
-                                            <rect key="frame" x="116.5" y="65" width="119" height="44"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="friends" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZF-eV-9Z4">
+                                            <rect key="frame" x="116.5" y="65.5" width="119" height="43.5"/>
                                             <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="40"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
